linux常用软件安装

--- a/linux/流程.md
+++ b/linux/流程.md
@@ -79,5 +79,37 @@
    64 bytes from 39.156.69.79 (39.156.69.79): icmp_seq=3 ttl=128 time=45.5 ms
    ```
 
+### 三、安装常用软件
+
+1. 安装`vim`
+
+   ```bash
+   yum install vim -y
+   ```
+
+2. 安装`htop`，首先需要安装`企业版Linux附加软件包(EPEL)`Centos7的，这里不安装yum搜索不到htop
+
+   ```bash
+   yum install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
+   ```
+
+   然后安装
+
+   ```9bash
+   yum install htop -y
+   ```
+
+3. 安装网络工具(常用`ifconfig`命令)
+
+   ```
+   yum install net-tools -y
+   ```
+
+4. 安装`wget`
+
+   ```bash
+   yum install wget -y
+   ```
+
    
 
